# sstable

./: .bazelignore  .bazelrc  .bazelrc.user.example  .copier-answers.yml  .gitignore  .golangci.yml  BAZEL-MIGRATION.md  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  Makefile  README.md  VERSION-BUMPS.md  go.mod  go.sum
.github/workflows/: go.yml
docs/claude/: hooks-guide.md  skills.md  slash-commands.md  sub-agents.md
go/: go.mod  go.sum
go/command/: BUILD.bazel  command.go
go/recordio/: BUILD.bazel  recordio.go  recordio_test.go
go/server/: BUILD.bazel  webserver.go
go/shard/: BUILD.bazel  shard.go  shard_test.go
go/sort/: BUILD.bazel  interface.go  interface_test.go  sort.go  sort_test.go
go/sstable/: BUILD.bazel  cursor.go  cursor_test.go  entry.go  entry_test.go  header.go  header_test.go  index.go  index_test.go  recordio.go  recordio_test.go  sstable.go  sstable_test.go  writer.go  writer_test.go
tools/format/: BUILD.bazel
