load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["webserver.go"],
    importpath = "github.com/jaeyeom/sstable/go/server",
    visibility = ["//visibility:private"],
    deps = ["//go/sstable:go_default_library"],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
