load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["shard.go"],
    importpath = "github.com/jaeyeom/sstable/go/shard",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["shard_test.go"],
    embed = [":go_default_library"],
)
